<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloForm"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/profile"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp">
                    <EditText
                        android:id="@+id/etNombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cajaNombre"
                        android:inputType="textCapWords"
                        android:background="@drawable/border_edittext"
                        android:textColor="@color/colorPrimaryDark"/>
                    <EditText
                        android:id="@+id/etApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cajaApellido"
                        android:inputType="textCapWords"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_edittext"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
            </LinearLayout>
            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cajaCorreo"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edittext"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cajaUsuario"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edittext"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cajaContrasenia"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edittext"
                android:textColor="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textoGenero"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                    <RadioButton
                        android:id="@+id/rbFemenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioFemenino"/>
                    <RadioButton
                        android:id="@+id/rbMasculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioMasculino"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/etCI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cajaCI"
                    android:inputType="number"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border_edittext"
                    android:textColor="@color/colorPrimaryDark"/>
                <EditText
                    android:id="@+id/etCelular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cajaTelefono"
                    android:inputType="number"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/border_edittext"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoHabilidades"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:id="@+id/cbUno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Java"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cbDos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Kotlin"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cbTres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Swift"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:id="@+id/cbCuatro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="AI"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cbCinco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="IoT"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cbSeis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="UI/UX"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoComentarios"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etComentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintIngreseComentarios"
                android:layout_marginTop="5dp"
                android:lines="3"
                android:gravity="top"
                android:background="@drawable/border_edittext"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelar"
                    android:textColor="#FFF"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/boton" />
                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/aceptar"
                    android:textColor="#FFF"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/boton"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>